Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -38,6 +38,7 @@ For each *defect*, state:
 
 = Use Cases = 
   # Create Schedule
+    * testing 123!
   # Load Schedule
   # Add Course
   # Remove Course
