Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -2,6 +2,8 @@
 
 = Outline =
 
+*Remember to create a new page for your own use cases, complete with test cases and defects.*
+
 For each *testing session*, state:
   * date
   * location
@@ -38,7 +40,6 @@ For each *defect*, state:
 
 = Use Cases = 
   # Create Schedule
-    * testing 123!
   # Load Schedule
   # Add Course
   # Remove Course
